--- a/index.html
+++ b/index.html
@@ -7,5 +7,10 @@
   </head>
   <body>
     <h1>Git Demo!</h1>
+    <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis,
+      iusto dolore labore fuga dignissimos esse illum ex quibusdam sequi aliquid
+      possimus veniam doloremque voluptates nam iste qui amet, aliquam unde.
+    </p>
   </body>
 </html>
